dfir_rs/tests/compile-fail-stable/surface_join_persistence_extra.rs
../compile-fail/surface_join_persistence_extra.rs